kubernetes/k8s-deployment.yaml
###################################
# abcall-payment-api
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abcall-bff
  labels:
    app: abcall-bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abcall-bff
  template:
    metadata:
      labels:
        app: abcall-bff
    spec:
      containers:
        - name:  abcall-bff
          image: abcall.azurecr.io/abcall-bff:1.0.0
          ports:
            - containerPort: 3002
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: abcall-bff-service
spec:
  type: LoadBalancer
  selector:
    app: abcall-bff
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
